--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     }
   ],
   "require": {
-    "mclkim/kaiser": "dev-master"
+    "mclkim/kaiser": "dev-master",
+    "hassankhan/config": "^0.10.0"
   }
 }
