--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,12 @@
   ],
   "require": {
     "mclkim/kaiser": "dev-master",
-    "hassankhan/config": "^0.10.0"
+    "hassankhan/config": "^0.10.0",
+    "usmanhalalit/pixie": "^2.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app"
+    }
   }
 }
